<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.settings.SettingsFragment">

    <data>

    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:id="@+id/svRootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@drawable/bg_scrollbar_indicator"
                android:scrollbars="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16"
                    android:paddingTop="@dimen/space_16"
                    android:layout_marginEnd="@dimen/space_16"
                    android:paddingBottom="@dimen/space_16"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_address_manager"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/text_address_manager"/>

                <View
                        android:id="@+id/addressManagerViewDivider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_0_5"
                        android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_edit_profile"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/edit_profile"/>

                <View
                        android:id="@+id/profileViewDivider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_0_5"
                        android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_change_password"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/change_password"/>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/space_0_5"
                      android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_rate_review"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/text_title_rating"/>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/space_0_5"
                      android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_subscription"
                        style="@style/TextViewStyle.Setting"
                        android:visibility="gone"
                        android:text="@string/subscription"/>

                <View
                        android:id="@+id/subscriptionViewDivider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_0_5"
                        android:visibility="gone"
                        android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_privacy_policy"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/privacy_policy"/>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/space_0_5"
                      android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_share"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/text_share"/>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/space_0_5"
                      android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_rate_us"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/text_rate_us"/>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/space_0_5"
                      android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_terms_of_use"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/terms_of_use"/>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/space_0_5"
                      android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_contact_us"
                        style="@style/TextViewStyle.Setting"
                        android:text="@string/text_contact_us"/>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/space_0_5"
                      android:background="@color/divider"/>

                <TextView
                        android:id="@+id/tv_logout"
                        style="@style/TextViewStyle.Setting"
                        android:layout_marginBottom="@dimen/space_16"
                        android:text="@string/logout"/>
            </LinearLayout>
        </ScrollView>

        <include
                android:id="@+id/progressBar"
                layout="@layout/item_progressbar"/>
    </RelativeLayout>
</layout>