<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/space_20">

    <TextView
            style="@style/TextViewStyle.Regular"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal"
            android:text="@string/text_title_rate_user"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/space_24"
            android:gravity="end">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSkip"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_8"
                android:text="@string/text_skip"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRateUser"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_0"
                android:layout_height="wrap_content"
                android:text="@string/text_rate"/>
    </LinearLayout>
</LinearLayout>

