<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.user.address.AddAddressActivity">

    <data>

    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <include
                    android:id="@+id/include_toolbar"
                    layout="@layout/toolbar"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_location_piker"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="@dimen/space_24"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginRight="@dimen/space_16"
                    android:maxLines="3"
                    android:hint="@string/location">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_location_piker"
                        style="@style/EditTextStyle.Medium"
                        tools:ignore="Autofill"
                        android:drawableEnd="@drawable/ic_add_location"
                        android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAddress"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginRight="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_24"
                    android:hint="@string/text_hint_address">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddress"
                        style="@style/EditTextStyle.Medium"
                        android:fadeScrollbars="false"
                        android:inputType="textMultiLine|textPostalAddress"
                        android:maxLines="5"
                        android:nestedScrollingEnabled="true"
                        android:scrollbarStyle="insideInset"
                        android:scrollbarThumbVertical="@drawable/bg_scrollbar_indicator"
                        android:scrollbars="vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_city_state"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginRight="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_24"
                    android:maxLines="3"
                    android:hint="@string/select_city">

                <AutoCompleteTextView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:padding="@dimen/space_18"
                        android:importantForAutofill="no"
                        android:id="@+id/ac_city_state"
                        style="@style/EditTextStyle.Medium"
                        tools:targetApi="o"
                        tools:ignore="LabelFor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="@dimen/space_24"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginRight="@dimen/space_16"
                    style="@style/TextViewStyle.Medium"
                    android:text="@string/address_type"/>

            <com.google.android.material.chip.ChipGroup
                    android:layout_marginTop="@dimen/space_5"
                    android:layout_width="match_parent"
                    android:id="@+id/cg_address_type"
                    android:layout_marginLeft="@dimen/space_16"
                    android:layout_marginRight="@dimen/space_16"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                <com.google.android.material.chip.Chip
                        style="@style/CustomChipChoice"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:focusable="true"/>

                <com.google.android.material.chip.Chip
                        android:clickable="true"
                        app:chipBackgroundColor="@color/selector_chip_background"
                        style="@style/CustomChipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work"
                        android:focusable="true"/>

                <com.google.android.material.chip.Chip
                        android:clickable="true"
                        style="@style/CustomChipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:focusable="true"/>
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_height="54dp"
                    android:layout_marginTop="@dimen/space_10"
                    style="@style/ButtonStyle"
                    android:text="@string/text_btn_save"/>
        </LinearLayout>

        <include android:id="@+id/progressBar"
                 layout="@layout/item_progressbar"/>
    </FrameLayout>
</layout>