<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/space_20">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_price"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/text_hint_new_price">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_price"
                style="@style/EditTextStyle.Medium"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="5"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/space_24"
            android:gravity="end">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_8"
                android:text="@string/text_cancel"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_0"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_save"/>
    </LinearLayout>
</LinearLayout>

