<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include
                android:id="@+id/selectAccountToolbar"
                layout="@layout/toolbar"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/space_16"
                android:layout_marginEnd="@dimen/space_16">

            <TextView
                    android:id="@+id/tvSelectAccountTitle"
                    style="@style/TextViewStyle.Medium"
                    android:textSize="@dimen/font_largest_medium"
                    android:textColor="@color/black"
                    android:text="@string/text_select_account"/>

            <TextView
                    android:id="@+id/tvSelectAccountDesc"
                    style="@style/TextViewStyle.Medium"
                    android:layout_below="@+id/tvSelectAccountTitle"
                    android:textColor="@color/grey"
                    android:layout_marginTop="@dimen/space_16"
                    android:text="@string/text_select_account_desc"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_below="@+id/tvSelectAccountDesc"
                    android:layout_above="@+id/tvAlreadyAccount"
                    android:weightSum="1"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/space_16"
                    android:paddingBottom="@dimen/space_16"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="0.5">

                    <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/chbUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:button="@drawable/selector_user"/>

                    <TextView
                            style="@style/TextViewStyle.Bold"
                            android:textAllCaps="true"
                            android:textColor="@color/grey"
                            android:layout_marginTop="@dimen/space_8"
                            android:text="@string/text_user"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:gravity="center">

                    <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/chbProvider"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:button="@drawable/selector_provider"/>

                    <TextView
                            style="@style/TextViewStyle.Bold"
                            android:textAllCaps="true"
                            android:layout_marginTop="@dimen/space_8"
                            android:text="@string/text_provider"
                            android:textColor="@color/grey"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                    android:id="@+id/tvAlreadyAccount"
                    style="@style/TextViewStyle.Proxima"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/space_8"
                    android:layout_marginBottom="@dimen/space_16"
                    android:text="@string/text_already_account"/>
        </RelativeLayout>
    </LinearLayout>
</layout>